[CDNG-1254]: Change the connectors resource end points to the latest resource conventions (#17075)
* [CDNG-1254]: Change the accountIdentifier query param to path param

* [CDNG-1254]: Add the KEY constant in the resource apis

* [CDNG-1254]: Change the request and response of the connector

* [CDNG-1254]: Rename the connector wrapper to connector dto

* [CDNG-1254]: Fix the unit tests

* [CDNG-1254]: Remove the unused function

* [CDNG-1254]: Fix the identifier check

* [CDNG-1254]: Change the connector identifier to identifier

* [CDNG-1254]: Remove the unnecessary wrapper